--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
