--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lrz": "^4.9.40",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.4",
